--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		}
 		body{
 			background: linear-gradient(110deg, #20231A 60%, #79574E 60%);
+			background-attachment:fixed;
 			font-family: 'Lora', serif;
 
 		}
