--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </head>
 <body>
 	<div class="container">
-		<div class="pic"> <img class="me" src="img/pic.jpeg" class="socimg"></div>
+		<div class="pic"> <img class="me" src="img/me.jpg" class="socimg"></div>
 		<h1>Ahmed Yaseen</h1>
 		<div class="content">
 			<div class="social social1" id="in"><a href="https://www.linkedin.com/in/ahmed-yaseen-5010a9239/"><img src="img/in.jpg" class="socimg"> <h2>Linkedin</h2>
